trunk/Archive2/11/b375685cbd3bb2/output
main.cpp:20:9: error: functions that differ only in their return type cannot be overloaded
   void bar(void* input_data);
        ^
main.cpp:14:10: note: previous declaration is here
   state bar(void* input_data);
         ^
main.cpp:28:12: error: expected expression
    a.bar({...};
           ^
main.cpp:30:29: error: expected expression
    A::state state = a.foo({...}};
                            ^
3 errors generated.
